kustomize/apps/profiles/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    argocd.argoproj.io/instance: kubeflow-profiles
    kustomize.component: profiles
  name: profiles-kfam
  namespace: kubeflow
spec:
  gateways:
    - istio-system/global-https-external-default-gateway
  hosts:
    - '*'
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /kfam
      match:
        - uri:
            prefix: /kfam/
      rewrite:
        uri: /kfam/
      route:
        - destination:
            host: profiles-kfam.kubeflow.svc.cluster.local
            port:
              number: 8081
